update from upstream

--- a/languages/en.yml
+++ b/languages/en.yml
@@ -3,6 +3,7 @@ nav:
   about: About
   articles: Writing
   write-ups: Write-ups
+  archive: Archive
   search: Search
   contacts: Contacts
   feed: Feed
